DBZ-4999 Refactoring and adapting