@@ -1,24 +1,36 @@
 /*
- * Copyright Debezium-Informix-Connector Authors.
+ * Copyright Debezium Authors.
  *
  * Licensed under the Apache Software License version 2.0, available at http://www.apache.org/licenses/LICENSE-2.0
  */
-
 package io.debezium.connector.informix;
 
+import java.sql.SQLException;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import org.apache.kafka.common.config.ConfigDef;
+import org.apache.kafka.common.config.ConfigValue;
 import org.apache.kafka.connect.connector.Task;
-import org.apache.kafka.connect.source.SourceConnector;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import io.debezium.annotation.ThreadSafe;
+import io.debezium.config.Configuration;
+import io.debezium.connector.common.RelationalBaseSourceConnector;
+import io.debezium.relational.RelationalDatabaseConnectorConfig;
 
+/**
+ * The main connector class used to instantiate configuration and execution classes
+ *
+ * @author Jiri Pechanec, Luis Garcés-Erice, Lars M Johansson
+ *
+ */
 @ThreadSafe
-public class InformixConnector extends SourceConnector {
+public class InformixConnector extends RelationalBaseSourceConnector {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(InformixConnector.class);
 
     private Map<String, String> properties;
 
@@ -29,7 +41,7 @@ public class InformixConnector extends SourceConnector {
 
     @Override
     public void start(Map<String, String> props) {
-        this.properties = Collections.unmodifiableMap(new HashMap<>(props));
+        this.properties = Map.copyOf(props);
     }
 
     @Override
@@ -53,5 +65,31 @@ public class InformixConnector extends SourceConnector {
     @Override
     public ConfigDef config() {
         return InformixConnectorConfig.configDef();
+    }
+
+    @Override
+    protected void validateConnection(Map<String, ConfigValue> configValues, Configuration config) {
+        ConfigValue hostnameValue = configValues.get(RelationalDatabaseConnectorConfig.HOSTNAME.name());
+        // Try to connect to the database ...
+        InformixConnectorConfig connectorConfig = new InformixConnectorConfig(config);
+        try (InformixConnection connection = new InformixConnection(connectorConfig.getJdbcConfig())) {
+            try {
+                connection.connect();
+                connection.execute("SELECT 1 FROM informix.systables");
+                LOGGER.info("Successfully tested connection for {} with user '{}'", connection.connectionString(), connection.username());
+            }
+            catch (SQLException e) {
+                LOGGER.error("Failed testing connection for {} with user '{}'", connection.connectionString(), connection.username(), e);
+                hostnameValue.addErrorMessage("Unable to connect: " + e.getMessage());
+            }
+        }
+        catch (SQLException e) {
+            LOGGER.error("Unexpected error shutting down the database connection", e);
+        }
+    }
+
+    @Override
+    protected Map<String, ConfigValue> validateAllFields(Configuration config) {
+        return config.validate(InformixConnectorConfig.ALL_FIELDS);
     }
 }
